fix(backend): OpensearchIncidentDao implementation (#5959)
* fix(backend): OpensearchIncidentDao implementation

* fix(backend): OpensearchIncidentDao implementation

* fix(backend): Fix OpensearchFlowNodeInstanceDaoTest

* fix(backend): Fix Opensearch unit tests

* fix(backend): Extract OpensearchIncident into dedicated file

* fix(backend): Move query builders to OpensearchQueryDSLWrapper

* fix(backend): Move query builders to OpensearchQueryDSLWrapper

* fix(backend): Move query builders to OpensearchQueryDSLWrapper

---------

Co-authored-by: Oleksandr Kriuchenko <okriuchenko@lohika.com>